--- a/statistics/statistics.css
+++ b/statistics/statistics.css
@@ -40,7 +40,7 @@ main {
 }
 
 .lower-three {
-    background-color: #0496FF;
+    background-color: #8F2D56;
     color: white;
     font-family: "Times New Roman", Times, serif;
 
