--- a/landing-page/styles.css
+++ b/landing-page/styles.css
@@ -16,7 +16,7 @@ h6{
     padding-right: 3%;
 }
 
-.container{
+.container-fluid{
     max-width: 100%;
     padding-left: 0%;
     padding-right: 0%;
