--- a/statistics/statistics.css
+++ b/statistics/statistics.css
@@ -11,15 +11,15 @@ main {
     width: 100%;
 }
 
-.title>h3 {
-    padding: 1% 45%;
-    max-width: 100%;
-    text-align: center;
-    color: white;
-    background-color: #006BA6;
-    font-family: "Times New Roman", Times, serif;
+/*.title>h3 {*/
+/*    padding: 1% 45%;*/
+/*    max-width: 100%;*/
+/*    text-align: center;*/
+/*    color: white;*/
+/*    background-color: #006BA6;*/
+/*    font-family: "Times New Roman", Times, serif;*/
 
-}
+/*}*/
 
 .navbar {
     background-color: #8F2D56;
@@ -30,19 +30,50 @@ main {
     display: flex;
     justify-content: center;
     max-width: 100%;
-
+    background-color: #FFBC42;
+     color: darkslategray;
+    padding: 4% 0%;
 
 }
 
-#Sex-Edvideo {
+.video-container {
+       padding: 5% 0%;
     display: flex;
-    flex-direction: column;
+    justify-content: center;
+    background-color: #D81159;
+}
+
+.edu-video{
+    max-width: 100%;
 }
 
 .lower-three {
     background-color: #8F2D56;
     color: white;
     font-family: "Times New Roman", Times, serif;
+
+}
+
+.photo-one{
+    max-width: 100%;
+}
+
+.row-two{
+    background-color: #D81159;
+}
+
+.row-three{
+    background-color: #FFBC42;
+    color: darkslategray;
+}
+
+.photo-two{
+    max-width: 100%;
+}
+
+.photo-three{
+    
+    max-width: 100%;
 
 }
 
