--- a/don.css
+++ b/don.css
@@ -6,7 +6,7 @@ body{
     min-height: 300px;
     min-width: 450px;
     margin-right: 5px;
-    background-color: #adb5bd;
+     background-color: #e6ccb2 !important;
     
     
 }
@@ -15,8 +15,10 @@ body{
     min-height: 300px;
     min-width: 400px;
     margin-right: 5px;
+    padding: 20px;
     /*margin-bottom: 10px;*/
     /*background-color: #adb5bd;*/
+     background-color: #e6ccb2 !important;
 }
 
 .btn{
@@ -46,5 +48,10 @@ body{
     /*display: block;*/
         /*overflow-wrap: normal;*/
 
+}
+
+.navbar{
+   text-color: tan;
+   background-color: #B08968;
 }
 
