--- a/learn-more/learn-more.css
+++ b/learn-more/learn-more.css
@@ -1,3 +1,8 @@
+header, main, footer {
+    margin: 0%;
+    font-family: Georgia, serif;
+}
+
 i {
     color: white;
 }
@@ -10,8 +15,18 @@ h2 {
     padding: 5%;
 }
 
+p {
+    font-weight: bold;
+}
+
+h4 {
+    text-decoration: underline; 
+}
+
 #top {
     padding: 5%;
+    font-size: 1em;
+    font-style: italic;
 }
 
 #row1, #row4 {
@@ -40,4 +55,8 @@ h2 {
     #col5, #col7, #col9, #col14, #col16, #col18 {
         background-color: #0496FF;
     } /*blue*/
+    
+    article {
+        font-size: 2em;
+    }
 }
