--- a/landingpage.css
+++ b/landingpage.css
@@ -1,8 +1,4 @@
 
-.section{
-    
-}
-
 .navbox{
     height:10%;
 }
@@ -22,7 +18,9 @@
 }
   .carousel-inner{
     margin: 0 auto ;
-  width:99%;
+  width:70%;
+  height:50%;
+  
   
   
 }
@@ -45,5 +43,21 @@ main{
     background-color: #DDB892;
     
 }
+.carousel{
+    margin-top: 30px;
+}
+.carouselimg{
+    height:500px;
+}
 
+.splitpage{
+    height:100px;
+    width:100%;
+}
 
+.showcase-img{
+    background-repeat: no-repeat;
+    background-size: 100%
+}
+
+.desc-img{
