--- a/don.css
+++ b/don.css
@@ -1,13 +1,28 @@
 body{
     background-color:#DDB892 ;
+    font-size: larger;
+    /*margin: 3rem;*/
+    /*padding: 50px;*/
+    margin: 10px;
+    column-gap: 20px;
+    
+  
+    
+    
 }
 
+
+ 
 .card-body {
     min-height: 300px;
     min-width: 450px;
     margin-right: 5px;
      background-color: #e6ccb2 !important;
+     margin: 15px;
+     
+     /*padding: 60px;*/
     
+     
     
 }
 
@@ -19,6 +34,10 @@ body{
     /*margin-bottom: 10px;*/
     /*background-color: #adb5bd;*/
      background-color: #e6ccb2 !important;
+     justify-content: space-between;
+     margin: 15px;
+    
+     
 }
 
 .btn{
@@ -28,8 +47,8 @@ body{
 
 .btn2{
     /*margin-left: ;*/
-    width:90%;
-    margin:auto;
+    /*width:90%;*/
+    /*margin:auto;*/
 }
 
 .scrolling-wrapper {
@@ -51,7 +70,7 @@ body{
 }
 
 .navbar{
-   text-color: tan;
+   /*text-color: tan;*/
    background-color: #B08968;
 }
 
