--- a/learn-more/learn-more.css
+++ b/learn-more/learn-more.css
@@ -23,9 +23,13 @@ h4 {
     text-decoration: underline; 
 }
 
+h6 {
+    font-weight: ;
+}
+
 #top {
     padding: 5%;
-    font-size: 1em;
+    font-size: 1.25em;
     font-style: italic;
 }
 
@@ -57,6 +61,6 @@ h4 {
     } /*blue*/
     
     article {
-        font-size: 2em;
+        font-size: 1.3em;
     }
 }
