--- a/learn-more/learn-more.css
+++ b/learn-more/learn-more.css
@@ -7,7 +7,7 @@ i {
     color: white;
 }
 
-h2 {
+h1 {
     background-color: #006BA6;
     color: white;
     display: flex;
@@ -17,9 +17,10 @@ h2 {
 
 p {
     font-weight: bold;
+    font-size: large;
 }
 
-h4 {
+h2 {
     text-decoration: underline; 
 }
 
@@ -36,7 +37,7 @@ h4 {
 
 #row2, #row5 {
     background-color: #D81159;
-    color: black;
+    color: white;
 }
 
 #row3, #row6 {
@@ -53,14 +54,17 @@ footer {
 @media screen and (max-width: 991.98px) {
     #col1, #col3, #col8, #col10, #col12, #col17 {
         background-color: #FFBC42; 
+        color: darkslategray;
     } /*yellow*/
     
     #col2, #col4, #col6, #col11, #col13, #col15 {
         background-color: #D81159;
+        color: white;
     } /*red*/
     
     #col5, #col7, #col9, #col14, #col16, #col18 {
         background-color: #006BA6;
+        color: white;
     } /*blue*/
     
     article {
