--- a/utilities.css
+++ b/utilities.css
@@ -16,6 +16,10 @@ nav{
     background-color: #8F2D56;
 }
 
+#navbarSupportedContent {
+    padding-right: 3%;
+}
+
 .dove{
     color: white;
     width: 4%;
