--- a/landing-page/styles.css
+++ b/landing-page/styles.css
@@ -1,9 +1,9 @@
 * {
-        margin:0;
+        margin:0px;
     }
 
 body {
-    margin: 0%;
+    margin: 0px;
     font-family: Georgia, serif;
 }
 
@@ -29,14 +29,23 @@ h6{
     justify-content: flex-end !important;
 }
 
-nav{
-    background-color: #8F2D56;
+.nav{
+background-color: #8F2D56;
+    display: flex;
+
+    padding: 2% 5%;
+}
+
+.nav>a{
+        font-size: 1em; 
 }
 
 .dove{
+    display: none;
     color: white;
     width: 4%;
     padding-left: 1%;
+    margin-right: 4%;
 }
 
 .title{
@@ -81,7 +90,7 @@ nav{
 
 .landing-row-1{
     display: flex;
-    flex-direction:column;
+    flex-direction:column-reverse;
     align-items:center;
     text-align: center;
     background-color: #FFBC42;
@@ -129,12 +138,12 @@ nav{
 }
 
 .resource{
-    /*border: 7px solid #006BA6;*/
-    /*border-radius: 10px;*/
+    /* border: 7px solid #006BA6; */
+    /* border-radius: 10px; */
     color: white;
     background-color: #006BA6;
     margin-top: 0%;
-    padding: 5% 0% 5% 6%;
+    padding: 5% 8% 5% 8%;;
     display: flex;
     flex-direction: column;
 }
@@ -225,8 +234,24 @@ p{
     justify-content: flex-end !important;
 }
 
-nav{
+.nav{
     background-color: #8F2D56;
+}
+
+.navbar-brand{
+        font-size: 1.5em;
+}
+
+.nav>a{
+        font-size: 1em; 
+}
+
+.dove{
+    display: inline;
+    color: white;
+    width: 4%;
+    padding-left: 1%;
+    margin-right: 4%;
 }
 
 .title{
@@ -236,24 +261,29 @@ nav{
 }
 
 .photo-one{
-    max-width: 90%;
+    max-width: 65%;
     height: auto;
 }
 
 .landing-row-1{
     margin-top: 5%;
     display: flex;
-    flex-direction: row;
+    flex-direction: row-reverse;
     align-items: center;
     text-align: justify;
+    padding: 4% 0%;
+        
 }
 
 .landing-row-2{
-    /*margin-top: 10%;*/
+    
     display: flex;
     flex-direction: row;
     align-items: center;
     text-align: justify;
+    padding: 1% 0%;
+    justify-content: center;
+    
 }
 
 .landing-mission-statement{
@@ -264,26 +294,28 @@ nav{
     padding-top: 5%;
 }
 
+.landing-row-1-col-1{
+
+}
+
 .landing-row-1-col-2{
+    text-align: center;
     min-width: 25%;
-    margin-right: 0%;
-    margin-left: -5%;
+    margin-right: 10%;
+    margin-left: -12%;
     margin-bottom: 5%;
-    padding: 0% 4%;
+    margin-top: 5%;
+    font-size: 1.20em;
 }
 
 .landing-row-2-col-2{
-min-width: 25%;
-    margin-left: 1%;
-    margin-right: -1%;
-    margin-bottom: -4%;
-    padding: 1% 1%;
+    text-align: center;
+    min-width: 0%;
+    font-size: 1.2em;
 }
 
 .photo-two{
-    
-    max-width: 100%;
-    height: auto;
+    max-width: 90%;
     
 }
     
@@ -299,12 +331,19 @@ min-width: 25%;
     background-color: #8F2D56;
 }
 
+.photo-resource {
+    max-height: 50%;
+    max-width: 100%;
+        margin-right: 25%;
+}
+
 .photo-resource-container{
         display: flex;
     justify-content: center;
     align-content: center;
     align-items: center;
-    margin-top: 0%;
+     margin: 0% auto;
+    
 
 
 }
