--- a/statistics/statistics.css
+++ b/statistics/statistics.css
@@ -11,10 +11,32 @@ main {
     width: 100%;
 }
 
-.navbar {
-    background-color: #8F2D56;
-    width: 100vw;
+.navbar-toggler{
+
+    justify-content: flex-end !important;
 }
+
+.nav{
+    background-color: #8F2D56;
+    padding: 2% 5%;
+}
+
+.navbar-brand{
+        font-size: 1.5em;
+}
+
+.nav>a{
+        font-size: 1em; 
+}
+
+.dove{
+    display: inline;
+    color: white;
+    width: 4%;
+    padding-left: 1%;
+    margin-right: 4%;
+}
+
 
 .title {
     display: flex;
@@ -50,9 +72,16 @@ main {
     max-width: 100%;
 }
 
+.row-text{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+
 .row-two {
     background-color: #D81159;
-
+    
 
 }
 
@@ -70,13 +99,6 @@ main {
     max-width: 100%;
 
 }
-
-.dove {
-    color: white;
-    width: 4%;
-    padding-left: 1%;
-}
-
 
 .footer {
     background-color: #006BA6;
