--- a/landingpage.css
+++ b/landingpage.css
@@ -55,8 +55,12 @@ main{
     width:100%;
 }
 
+
 .showcase-img{
     background-repeat: no-repeat;
     background-size: 100%
 }
 
+.desc-img{
+    
+}
