--- a/landingpage.css
+++ b/landingpage.css
@@ -40,8 +40,6 @@
    background-color: #B08968;
 }
 main{
-    background-color: #DDB892;
-    
 }
 .carousel{
     margin-top: 30px;
@@ -60,4 +58,7 @@ main{
     background-size: 100%
 }
 
-.desc-img{
+body{
+     background-color: #DDB892;
+     margin:5px
+}
