--- a/don.css
+++ b/don.css
@@ -1,30 +1,29 @@
-
-body{
-    background-color:#DDB892 ;
+body {
+    background-color: #DDB892;
     font-size: larger;
     /*margin: 3rem;*/
     /*padding: 50px;*/
     margin: 10px;
     column-gap: 20px;
-    
-  
-    
-    
+
+
+
+
 }
 
 
- 
+
 .card-body {
     min-height: 300px;
     min-width: 450px;
     margin-right: 5px;
-     background-color: #e6ccb2 !important;
-     margin: 15px;
-     
-     /*padding: 60px;*/
-    
-     
-    
+    background-color: #e6ccb2 !important;
+    margin: 15px;
+
+    /*padding: 60px;*/
+
+
+
 }
 
 .card-body2 {
@@ -34,43 +33,81 @@ body{
     padding: 20px;
     /*margin-bottom: 10px;*/
     /*background-color: #adb5bd;*/
-     background-color: #e6ccb2 !important;
-     justify-content: space-between;
-     margin: 15px;
-    
-     
+    background-color: #e6ccb2 !important;
+    justify-content: space-between;
+    margin: 15px;
+
+
 }
 
-.btn{
+.btn {
     margin-top: auto;
 }
 
 
-.btn2{
+.btn2 {
     /*margin-left: ;*/
     /*width:90%;*/
     /*margin:auto;*/
 }
 
 .scrolling-wrapper {
-  overflow-x: scroll;
-  overflow-y: hidden;
-  /*white-space: nowrap;*/
+    overflow-x: scroll;
+    overflow-y: hidden;
+    /*white-space: nowrap;*/
 
-  
+
 }
 
 /*.card {*/
 /*    display: inline-block;*/
 /*  }*/
-  
-.hello{
+
+.hello {
     /*display: block;*/
-        /*overflow-wrap: normal;*/
+    /*overflow-wrap: normal;*/
 
 }
 
-.navbar{
-   /*text-color: tan;*/
-   background-color: #B08968;
+.navbar {
+    /*text-color: tan;*/
+    background-color: #B08968;
+}
+
+@media screen and (max-width: 600px) {
+    .card-body {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        min-width: auto;
+
+    }
+
+    .card-body2 {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        min-width: auto;
+        
+
+    }
+
+    /*.scrolling-wrapper {*/
+    /*    overflow-x: visible;*/
+    /*    overflow-y: hidden;*/
+    /*white-space: nowrap;*/
+
+
+    /*}*/
+
+    .d-flex {
+        display: block !important;
+        /*width: 100vw;*/
+    }
+    
+    body{
+        width: 100vw;
+        
+    }
+
 }
