--- a/landing-page/styles.css
+++ b/landing-page/styles.css
@@ -212,7 +212,13 @@ p{
     font-size: 1.20em;
 }
 
-@media only screen and (min-width: 600px) {
+
+.cards{
+    background-color: #FFBC42;
+}
+
+
+@media only screen and (min-width: 700px) {
     *{
         margin:0;
 }
@@ -229,21 +235,35 @@ p{
 
 
 
-.navbar-toggler{
+/*.navbar-toggler{*/
 
-    justify-content: flex-end !important;
-}
+/*    justify-content: flex-end !important;*/
+/*}*/
 
-.nav{
-    background-color: #8F2D56;
-}
+/*.nav{*/
+/*    background-color: #8F2D56;*/
+/*}*/
 
-.navbar-brand{
-        font-size: 1.5em;
-}
+/*.navbar-brand{*/
+/*        font-size: 1.5em;*/
+/*}*/
 
-.nav>a{
-        font-size: 1em; 
+/*.nav>a{*/
+/*        font-size: 1em; */
+/*}*/
+
+/*.dove{*/
+/*    display: inline;*/
+/*    color: white;*/
+/*    width: 4%;*/
+/*    padding-left: 1%;*/
+/*    margin-right: 4%;*/
+/*}*/
+
+.title{
+    margin: 0% 0% 0% 0%;
+    padding: 5% 0% 5% 0%;
+    max-width: 100%; 
 }
 
 .dove{
@@ -254,11 +274,6 @@ p{
     margin-right: 4%;
 }
 
-.title{
-    margin: 0% 0% 0% 0%;
-    padding: 5% 0% 5% 0%;
-    max-width: 100%; 
-}
 
 .photo-one{
     max-width: 65%;
@@ -362,7 +377,8 @@ p{
 .footer-contact{
     color: white;
     text-align: right;
-    padding-right: 8%;
+
+    margin-left: 4%;
 }
 
 .footer-contact>a{
