--- a/landing-page/styles.css
+++ b/landing-page/styles.css
@@ -235,30 +235,30 @@ p{
 
 
 
-/*.navbar-toggler{*/
+.navbar-toggler{
 
-/*    justify-content: flex-end !important;*/
-/*}*/
+    justify-content: flex-end !important;
+}
 
-/*.nav{*/
-/*    background-color: #8F2D56;*/
-/*}*/
+.nav{
+    background-color: #8F2D56;
+}
 
-/*.navbar-brand{*/
-/*        font-size: 1.5em;*/
-/*}*/
+.navbar-brand{
+        font-size: 1.5em;
+}
 
-/*.nav>a{*/
-/*        font-size: 1em; */
-/*}*/
+.nav>a{
+        font-size: 1em; 
+}
 
-/*.dove{*/
-/*    display: inline;*/
-/*    color: white;*/
-/*    width: 4%;*/
-/*    padding-left: 1%;*/
-/*    margin-right: 4%;*/
-/*}*/
+.dove{
+    display: inline;
+    color: white;
+    width: 4%;
+    padding-left: 1%;
+    margin-right: 4%;
+}
 
 .title{
     margin: 0% 0% 0% 0%;
