added landing page html outside of unit-1-project folder

--- a/statistics/statistics.css
+++ b/statistics/statistics.css
@@ -14,6 +14,7 @@ main {
 header {
     background-color: #8F2D56;
     padding: 1.35rem 0%;
+    font-family: Georgia, serif;
 }
 
 .navbar-toggler {
