--- a/learn-more/learn-more.css
+++ b/learn-more/learn-more.css
@@ -1,6 +1,10 @@
-header, main, footer {
+header,
+main,
+footer {
     margin: 0%;
     font-family: Georgia, serif;
+    background-color: #8f2d56;
+
 }
 
 i {
@@ -11,63 +15,95 @@ h1 {
     background-color: #006BA6;
     color: white;
     display: flex;
-    justify-content:center;
+    justify-content: center;
     padding: 5%;
 }
+
 
 p {
     font-weight: bold;
     font-size: large;
+    
 }
 
 h2 {
-    text-decoration: underline; 
+    text-decoration: underline;
 }
 
 #top {
     padding: 5%;
     font-size: 1.25em;
     font-style: italic;
+    color: white;
 }
 
-#row1, #row4 {
+#row1,
+#row4 {
     background-color: #FFBC42;
     color: darkslategray;
 }
 
-#row2, #row5 {
+#row2,
+#row5 {
     background-color: #D81159;
     color: white;
 }
 
-#row3, #row6 {
+#row3,
+#row6 {
     background-color: #006BA6;
     color: white;
 }
 
 footer {
-    background-color: #8F2D56!important;
+    background-color: #8F2D56 !important;
 }
 
 
 
 @media screen and (max-width: 991.98px) {
-    #col1, #col3, #col8, #col10, #col12, #col17 {
-        background-color: #FFBC42; 
+
+    #col1,
+    #col3,
+    #col8,
+    #col10,
+    #col12,
+    #col17 {
+        background-color: #FFBC42;
         color: darkslategray;
-    } /*yellow*/
-    
-    #col2, #col4, #col6, #col11, #col13, #col15 {
+    }
+
+    /*yellow*/
+
+    #col2,
+    #col4,
+    #col6,
+    #col11,
+    #col13,
+    #col15 {
         background-color: #D81159;
         color: white;
-    } /*red*/
-    
-    #col5, #col7, #col9, #col14, #col16, #col18 {
+    }
+
+    /*red*/
+
+    #col5,
+    #col7,
+    #col9,
+    #col14,
+    #col16,
+    #col18 {
         background-color: #006BA6;
         color: white;
-    } /*blue*/
-    
+    }
+
+
+
+
+    /*blue*/
+
     article {
-        font-size: 1.3em;
+        font-size: 1.3em
+        
     }
 }
