--- a/statistics/statistics.css
+++ b/statistics/statistics.css
@@ -12,7 +12,7 @@ main {
 }
 
 header {
-    background-color: #8F2D56;
+    background-color: #8f2d56;
     padding: 1.35rem 0%;
     font-family: Georgia, serif;
 }
